Improves the reactivity of the navigator
Better recognizes actions and their arguments
Lowers the memory used to store IDescriptions (again)
Offers the outline directly in the navigator
Signed-off-by: AlexisDrogoul <alexis.drogoul@gmail.com>